# wrl

./: .gitignore  Cargo.toml  bhv.rs  bindings.js  build-wasm.sh  build.sh  index.html  main.js  mapgen.py  mapgen2.py  mapgen3.py  mapgen4.py  notes.txt
base/: Cargo.toml
base/src/: ai-old.txt  ai.rs  base.rs  bhv.rs  debug.rs  dex.rs  effect.rs  entity.rs  game.rs  knowledge.rs  lib.rs  lighting.rs  list.rs  mapgen.rs  pathing.rs  shadowcast.rs  threats.rs  ui.rs  wg_mc.rs  wg_simplex.rs
ga/: optimize-chase-target.txt  optimize.py
scripts/: circles.py  optimize.py
shadowcast/: bundle.js  index.html  style.css
src/: base.rs  effect.rs  entity.rs  game.rs  knowledge.rs  lib.rs  list.rs  main.rs  pathing.rs
term/: Cargo.toml
term/src/: main.rs
wasm/: Cargo.toml  build.sh  debug.html  index.html
wasm/src/: lib.rs
wasm/web/: debug.js  index.js  lib.js  main.js
