[package]
name = "wrl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
incremental = true

[dependencies]
fxhash = "0.2.1"
getrandom = { version = "0.2", features = ["js"] }
lazy_static = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
slotmap = "1.0.7"
wasm-bindgen = "0.2.95"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
