[package]
name = "wrl-base"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = "1.0"
fxhash = "0.2.1"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
lazy_static = "1.4.0"
rand = "0.9.2"
rand_distr = "0.5.1"
slotmap = "1.0.7"
thin-vec = "0.2.13"

[[bin]]
name = "mapgen-test"
path = "src/bin/mapgen-test.rs"
